--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <nav class="sidebar text-white container py-5 d-flex flex-column align-items-center">
             <!-- top navbar -->
             <div class="nav-top">
-                <div class="row flex-column">
                     <ul class="list-unstyled">
                         <li class="mb-4">
                         <a href="#" class="text-white text-decoration-none">
@@ -71,20 +70,16 @@
                         </a>
                         </li>
                     </ul>
-                    <div class="col"> <!-- 2nd Column sidebar options -->
-                    <!-- Content for the 2nd Column (central column) -->
-                    </div>
-                </div>
             </div>
             <!-- bottom navbar -->
-            <div class="bottom-navbar mb-auto">
-                HELLO
+            <div class="bottom-navbar mt-auto">
+                <i class="fa-solid fa-gear fs-4"></i>
             </div>
             <!-- /bottom navbar -->
         </nav>
         <!-- right container -->
         <div class="right-container d-flex">
-            <div class="mb-auto">
+            <div class="">
                 hello
             </div>
         </div>
