feat: main top first col

--- a/index.html
+++ b/index.html
@@ -78,16 +78,25 @@
             <!-- /bottom navbar -->
         </nav>
         <!-- right container -->
-        <div class="right-container d-flex">
-            <div class="">
-                hello
+        <div class="right-container d-flex flex-column">
+            <div class="main-top text-white py-4">
+                <div class="container">
+                    <div class="row flex-column">
+                      <div class="col">
+                        <div class="d-flex">
+                            <h4 class="fs-5 pe-3 lh-base">Nuovo Studente</h4>
+                            <button type="button" class="btn text-white border"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                      </div>
+                      <div class="col">Column 2</div>
+                      <div class="col">Column 3</div>
+                    </div>
+                  </div>
             </div>
         </div>
         <!-- /right container -->
     </main>
     <!-- /MAIN -->
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
