--- a/index.html
+++ b/index.html
@@ -79,13 +79,26 @@
         </nav>
         <!-- right container -->
         <div class="right-container d-flex flex-column">
-            <div class="main-top text-white py-4">
+            <!-- main top -->
+            <div class="main-top text-white">
                 <div class="container">
                     <div class="row flex-column">
                       <div class="col">
-                        <div class="d-flex">
-                            <h4 class="fs-5 pe-3 lh-base">Nuovo Studente</h4>
-                            <button type="button" class="btn text-white border"><i class="fa-solid fa-plus"></i></button>
+                        <div class="d-flex align-items-center">
+                            <h4 class="fs-5 pe-3">Nuovo Studente</h4>
+                            <!-- offcanvas -->
+                            <button class="btn btn-lg text-white border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-plus"></i></button>
+
+                            <div class="offcanvas offcanvas-end min-vw-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling"  aria-labelledby="offcanvasScrollingLabel">
+                                <div class="offcanvas-header">
+                                    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                                </div>
+                            </div>
+                            <!-- /offcanvas -->
                         </div>
                       </div>
                       <div class="col">Column 2</div>
@@ -93,6 +106,7 @@
                     </div>
                   </div>
             </div>
+            <!-- /main top -->
         </div>
         <!-- /right container -->
     </main>
