--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                                         </div>   
                                     </div>
                                     <div class="row d-flex justify-content-between">
-
                                         <div class="form-group col">
                                             <label for="input-email" class="form-label">Email</label>
                                             <div class="input-group mb-3">
@@ -114,15 +113,52 @@
                                               <input type="email" class="form-control" placeholder="" id="input-email" aria-describedby="basic-addon1">
                                             </div>
                                           </div>
-
-
-
                                         <div class="col mb-3">
                                             <label for="input-pass" class="form-label">Password</label>
                                             <input type="password" class="form-control" id="input-pass" placeholder="">
                                         </div>   
                                     </div>
-                                </div>
+                                    <div class="col mb-3">
+                                        <label for="input-address" class="form-label">Indirizzo</label>
+                                        <input type="text" class="form-control" id="input-address" placeholder="">
+                                    </div>
+                                    <div class="row d-flex justify-content-between">
+                                        <div class="col mb-3">
+                                            <label for="input-city" class="form-label">Città</label>
+                                            <input type="text" class="form-control" id="input-city" placeholder="">
+                                        </div>
+                                        <div class="col mb-3 d-flex">
+                                            <div class="col-8 me-2">
+                                                <label for="input-state" class="form-label">Stato</label>
+                                                <select class="form-select" aria-label="Default select example">
+                                                <option selected>Scegli...</option>
+                                                <option value="1">Italia</option>
+                                                <option value="2">Svizzera</option>
+                                                <option value="3">Germania</option>
+                                              </select>
+                                            </div>
+                                            <div>
+                                                <label for="input-postal-code" class="form-label">CAP</label>
+                                                <input type="text" class="form-control" id="input-postal-code" placeholder="">
+                                            </div>
+                                        </div> 
+                                    </div>
+                                    <div class="mb-3">
+                                         <label for="formFile" class="form-label">Foto</label>
+                                        <div class="input-group custom-file-button">
+                                            <label class="input-group-text" for="inputGroupFile">Scegli file</label>
+                                            <input type="file" class="form-control" id="inputGroupFile">
+                                        </div>
+                                    </div>
+                                    <div class="form-check mb-3">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <label class="form-check-label" for="flexCheckDefault">
+                                              Seleziona per proseguire
+                                        </label>
+                                    </div>
+                                    <button type="button" class="btn btn-primary">Salva</button>
+                                    <button type="button" class="btn btn-warning">Svuota</button>
+
                             </div>
                             <!-- /offcanvas -->
                         </div>
