feat: main top breadcrumb

--- a/index.html
+++ b/index.html
@@ -158,12 +158,26 @@
                                     </div>
                                     <button type="button" class="btn btn-primary">Salva</button>
                                     <button type="button" class="btn btn-warning">Svuota</button>
-
                             </div>
                             <!-- /offcanvas -->
                         </div>
                       </div>
-                      <div class="col">Column 2</div>
+                      <div class="col py-2">
+                        <div class="d-flex pb-3">
+                            <h3 class="fw-semibold me-3">Boolean</h3>
+                            <button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Piano Base</button>
+                        </div>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb align-items-center" style="--bs-breadcrumb-item-padding-x: 0;">
+                              <li class="breadcrumb-item mt-1"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">3 App</button></li>
+                              <i class="fa-solid fa-angles-right mx-1"></i>
+                              
+                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
+                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
+                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
+                            </ol>
+                        </nav>
+                      </div>
                       <div class="col">Column 3</div>
                     </div>
                   </div>
