feat: main top mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- right container -->
         <div class="right-container d-flex flex-column">
             <!-- main top -->
-            <div class="main-top text-white">
+            <div class="main-top text-white pb-4">
                 <div class="container">
                     <div class="row flex-column">
                       <div class="col">
@@ -170,7 +170,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb align-items-center" style="--bs-breadcrumb-item-padding-x: 0;">
                               <li class="breadcrumb-item mt-1"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">3 App</button></li>
-                              <i class="fa-solid fa-angles-right mx-1"></i>
+                              <i class="fa-solid fa-angles-right mx-2"></i>
                               
                               <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
                               <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
@@ -178,7 +178,10 @@
                             </ol>
                         </nav>
                       </div>
-                      <div class="col">Column 3</div>
+                      <div class="col">
+                        <h4 class="fs-5 pe-3">Studenti online negli ultimi 30 minuti</h4>
+                        <h2 class="fs-1">125</h2>
+                      </div>
                     </div>
                   </div>
             </div>
