--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                         <li class="mb-4">
                         <a href="#" class="text-white text-decoration-none">
                             <i class="fa-solid fa-house fs-4"></i> 
-                            <span class="d-none d-lg-inline">Home</span>
+                            <span class="d-none d-xl-inline">Home</span>
                         </a>
                         </li>
                         <li class="mb-4">
                         <a href="#" class="text-white text-decoration-none">
                             <i class="fa-solid fa-chart-simple fs-4"></i>
-                            <span class="d-none d-lg-inline">Stats</span>
+                            <span class="d-none d-xl-inline">Stats</span>
                         </a>
                         </li>
                         <li class="mb-4">
                         <a href="#" class="text-white text-decoration-none">
                             <i class="fa-solid fa-signal fs-4"></i>
-                            <span class="d-none d-lg-inline">Signals</span>
+                            <span class="d-none d-xl-inline">Signals</span>
                         </a>
                         </li>
                     </ul>
@@ -82,108 +82,109 @@
             <!-- main top -->
             <div class="main-top text-white pb-4">
                 <div class="container">
-                    <div class="row flex-column">
-                      <div class="col">
-                        <div class="d-flex align-items-center">
-                            <h4 class="fs-5 pe-3">Nuovo Studente</h4>
-                            <!-- offcanvas -->
-                            <button class="btn btn-lg text-white border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-plus"></i></button>
+                    <div class="row d-block d-md-flex">
+                        <div class="col col-md-4 col-xl-2 order-md-2">
+                            <div class="d-flex align-items-center">
+                                <h4 class="fs-5 pe-3">Nuovo Studente</h4>
+                                <!-- offcanvas -->
+                                <button class="btn btn-lg text-white border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-plus"></i></button>
 
-                            <div class="offcanvas offcanvas-end min-vw-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling"  aria-labelledby="offcanvasScrollingLabel">
-                                <div class="offcanvas-header">
-                                    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Inserisci un nuovo studente</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                <div class="offcanvas offcanvas-end min-vw-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling"  aria-labelledby="offcanvasScrollingLabel">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Inserisci un nuovo studente</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        <div class="row d-flex justify-content-between">
+                                            <div class="col mb-3">
+                                                <label for="input-name" class="form-label">Nome</label>
+                                                <input type="text" class="form-control" id="input-name" placeholder="">
+                                            </div>
+                                            <div class="col mb-3">
+                                                <label for="input-surname" class="form-label">Cognome</label>
+                                                <input type="text" class="form-control" id="input-surname" placeholder="">
+                                            </div>   
+                                        </div>
+                                        <div class="row d-flex justify-content-between">
+                                            <div class="form-group col">
+                                                <label for="input-email" class="form-label">Email</label>
+                                                <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">@</span>
+                                                <input type="email" class="form-control" placeholder="" id="input-email" aria-describedby="basic-addon1">
+                                                </div>
+                                            </div>
+                                            <div class="col mb-3">
+                                                <label for="input-pass" class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="input-pass" placeholder="">
+                                            </div>   
+                                        </div>
+                                        <div class="col mb-3">
+                                            <label for="input-address" class="form-label">Indirizzo</label>
+                                            <input type="text" class="form-control" id="input-address" placeholder="">
+                                        </div>
+                                        <div class="row d-flex justify-content-between">
+                                            <div class="col mb-3">
+                                                <label for="input-city" class="form-label">Città</label>
+                                                <input type="text" class="form-control" id="input-city" placeholder="">
+                                            </div>
+                                            <div class="col mb-3 d-flex">
+                                                <div class="col-8 me-2">
+                                                    <label for="input-state" class="form-label">Stato</label>
+                                                    <select class="form-select" aria-label="Default select example">
+                                                    <option selected>Scegli...</option>
+                                                    <option value="1">Italia</option>
+                                                    <option value="2">Svizzera</option>
+                                                    <option value="3">Germania</option>
+                                                </select>
+                                                </div>
+                                                <div>
+                                                    <label for="input-postal-code" class="form-label">CAP</label>
+                                                    <input type="text" class="form-control" id="input-postal-code" placeholder="">
+                                                </div>
+                                            </div> 
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="formFile" class="form-label">Foto</label>
+                                            <div class="input-group custom-file-button">
+                                                <label class="input-group-text" for="inputGroupFile">Scegli file</label>
+                                                <input type="file" class="form-control" id="inputGroupFile">
+                                            </div>
+                                        </div>
+                                        <div class="form-check mb-3">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                                Seleziona per proseguire
+                                            </label>
+                                        </div>
+                                        <button type="button" class="btn btn-primary">Salva</button>
+                                        <button type="button" class="btn btn-warning">Svuota</button>
                                 </div>
-                                <div class="offcanvas-body">
-                                    <div class="row d-flex justify-content-between">
-                                        <div class="col mb-3">
-                                            <label for="input-name" class="form-label">Nome</label>
-                                            <input type="text" class="form-control" id="input-name" placeholder="">
-                                        </div>
-                                        <div class="col mb-3">
-                                            <label for="input-surname" class="form-label">Cognome</label>
-                                            <input type="text" class="form-control" id="input-surname" placeholder="">
-                                        </div>   
-                                    </div>
-                                    <div class="row d-flex justify-content-between">
-                                        <div class="form-group col">
-                                            <label for="input-email" class="form-label">Email</label>
-                                            <div class="input-group mb-3">
-                                              <span class="input-group-text" id="basic-addon1">@</span>
-                                              <input type="email" class="form-control" placeholder="" id="input-email" aria-describedby="basic-addon1">
-                                            </div>
-                                          </div>
-                                        <div class="col mb-3">
-                                            <label for="input-pass" class="form-label">Password</label>
-                                            <input type="password" class="form-control" id="input-pass" placeholder="">
-                                        </div>   
-                                    </div>
-                                    <div class="col mb-3">
-                                        <label for="input-address" class="form-label">Indirizzo</label>
-                                        <input type="text" class="form-control" id="input-address" placeholder="">
-                                    </div>
-                                    <div class="row d-flex justify-content-between">
-                                        <div class="col mb-3">
-                                            <label for="input-city" class="form-label">Città</label>
-                                            <input type="text" class="form-control" id="input-city" placeholder="">
-                                        </div>
-                                        <div class="col mb-3 d-flex">
-                                            <div class="col-8 me-2">
-                                                <label for="input-state" class="form-label">Stato</label>
-                                                <select class="form-select" aria-label="Default select example">
-                                                <option selected>Scegli...</option>
-                                                <option value="1">Italia</option>
-                                                <option value="2">Svizzera</option>
-                                                <option value="3">Germania</option>
-                                              </select>
-                                            </div>
-                                            <div>
-                                                <label for="input-postal-code" class="form-label">CAP</label>
-                                                <input type="text" class="form-control" id="input-postal-code" placeholder="">
-                                            </div>
-                                        </div> 
-                                    </div>
-                                    <div class="mb-3">
-                                         <label for="formFile" class="form-label">Foto</label>
-                                        <div class="input-group custom-file-button">
-                                            <label class="input-group-text" for="inputGroupFile">Scegli file</label>
-                                            <input type="file" class="form-control" id="inputGroupFile">
-                                        </div>
-                                    </div>
-                                    <div class="form-check mb-3">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
-                                              Seleziona per proseguire
-                                        </label>
-                                    </div>
-                                    <button type="button" class="btn btn-primary">Salva</button>
-                                    <button type="button" class="btn btn-warning">Svuota</button>
+                                <!-- /offcanvas -->
+                                </div>
                             </div>
-                            <!-- /offcanvas -->
                         </div>
-                      </div>
-                      <div class="col py-2">
-                        <div class="d-flex pb-3">
-                            <h3 class="fw-semibold me-3">Boolean</h3>
-                            <button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Piano Base</button>
+                        <div class="col py-5 py-md-0 col-md-4 col-xl-5 order-md-0">
+                            <div class="d-flex pb-3">
+                                <h3 class="fw-semibold me-3">Boolean</h3>
+                                <button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4 button-size">Piano Base</button>
+                            </div>
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb align-items-center" style="--bs-breadcrumb-item-padding-x: 0;">
+                                <li class="breadcrumb-item mt-1"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">3 App</button></li>
+                                <i class="fa-solid fa-angles-right mx-2"></i>
+                                <li class="breadcrumb-item mt-1"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4 d-xl-none"><i class="fa-solid fa-plus"></i></button></li>
+                                <li class="breadcrumb-item mt-1 me-2 d-none d-xl-block"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
+                                <li class="breadcrumb-item mt-1 me-2 d-none d-xl-block"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Web App</button></li>
+                                <li class="breadcrumb-item mt-1 me-2 d-none d-xl-block"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Blog App</button></li>
+                                </ol>
+                            </nav>
                         </div>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb align-items-center" style="--bs-breadcrumb-item-padding-x: 0;">
-                              <li class="breadcrumb-item mt-1"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">3 App</button></li>
-                              <i class="fa-solid fa-angles-right mx-2"></i>
-                              
-                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
-                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
-                              <li class="breadcrumb-item mt-1 me-2"><button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4">Boolean Mobile App</button></li>
-                            </ol>
-                        </nav>
-                      </div>
-                      <div class="col">
-                        <h4 class="fs-5 pe-3">Studenti online negli ultimi 30 minuti</h4>
-                        <h2 class="fs-1">125</h2>
-                      </div>
+                        <div class="col col-md-4 col-xl-5 order-md-1">
+                            <h4 class="fs-5 pe-3">Studenti online negli ultimi 30 minuti</h4>
+                            <h2 class="fs-1">125</h2>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
             <!-- /main top -->
         </div>
