feat: main top adjusted

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="row d-block d-md-flex">
                         <div class="col col-md-4 col-xl-2 order-md-2">
                             <div class="d-flex align-items-center">
-                                <h4 class="fs-5 pe-3">Nuovo Studente</h4>
+                                <h4 class="ms-font pe-3">Nuovo Studente</h4>
                                 <!-- offcanvas -->
                                 <button class="btn btn-lg text-white border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-plus"></i></button>
 
@@ -163,8 +163,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col py-5 py-md-0 col-md-4 col-xl-5 order-md-0">
-                            <div class="d-flex pb-3">
+                        <div class="col py-4 py-md-0 col-md-4 col-xl-5 order-md-0">
+                            <div class="d-flex pb-3 align-items-center">
                                 <h3 class="fw-semibold me-3">Boolean</h3>
                                 <button type="button" class="btn bg-dark bg-opacity-25 text-white rounded-4 button-size">Piano Base</button>
                             </div>
@@ -180,7 +180,7 @@
                             </nav>
                         </div>
                         <div class="col col-md-4 col-xl-5 order-md-1">
-                            <h4 class="fs-5 pe-3">Studenti online negli ultimi 30 minuti</h4>
+                            <h4 class="ms-font pe-3 pb-3">Studenti online negli ultimi 30 minuti</h4>
                             <h2 class="fs-1">125</h2>
                         </div>
                     </div>
