feat: main bottom containers

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="col px-3"> <!-- 2nd Column (flexible width) input field -->
                 <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-magnifying-glass"></i></span>
-                    <input type="text" class="form-control border-start-0 bg-body-secondary" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Username" aria-describedby="addon-wrapping">
+                    <input type="text" class="form-control border-start-0 bg-body-secondary" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="search" aria-describedby="addon-wrapping">
                 </div>
             </div>
-            <div class="col-auto dd-button"> <!-- 3rd Column - dropdown link -->
+            <div class="col-auto"> <!-- 3rd Column - dropdown link -->
                 <div class="dropdown">
                     <a class="btn btn-secondary bg-white border-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa-solid fa-bell text-warning fs-4"></i>
@@ -82,7 +82,7 @@
         <div class="right-container d-flex flex-column">
             <!-- main top -->
             <div class="main-top text-white pb-4">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row d-block d-md-flex">
                         <div class="col col-md-4 col-xl-2 order-md-2">
                             <div class="d-flex align-items-center">
@@ -188,6 +188,25 @@
                 </div>
             </div>
             <!-- /main top -->
+            <!-- main bottom -->
+            <div class="main-bottom">
+                <div class="container-fluid">
+                    <div class="row flex-xl-row">
+                        <div class="col-12 col-xl-8 bg-dark">
+                            <div>
+                                hello
+                            </div>
+                        </div>
+                    <div class="col-12 col-xl-4 bg-warning">
+                        <div>
+                            hello
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                
+            </div>
+            <!-- /main bottom -->
         </div>
         <!-- /right container -->
     </main>
