feat: maion bottom table responsive

--- a/index.html
+++ b/index.html
@@ -192,13 +192,120 @@
             <div class="main-bottom">
                 <div class="container-fluid">
                     <div class="row flex-xl-row">
-                        <div class="col-12 col-xl-8 bg-dark">
-                            <div>
-                                hello
+                         <div class="col-12 col-xl-8 bg-dark"> <!--column top and left -->
+                            <div class="col-top">
+                                <div class="row">
+                                    <div class="col-12"> <!--prossime classi -->
+                                        <div class="py-4">
+                                            <div class="card">
+                                                <div class="card-header fs-4">
+                                                  Prossime Classi
+                                                </div>
+                                                <!-- table -->
+                                                <div class="container-fluid">
+                                                    <table class="table table-hover">
+                                                        <thead>
+                                                          <tr>
+                                                            <th scope="col" class="col-md-5">Nome</th>
+                                                            <th scope="col" class="d-none d-md-table-cell">Data inizio</th>
+                                                            <th scope="col" class="d-none d-md-table-cell">ROI</th>
+                                                            <th scope="col" class="">Stato</th>
+                                                            <th scope="col" class="">Azioni</th>
+                                                          </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                          <tr>
+                                                            <th scope="row">Classe 75</th>
+                                                            <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 76</th>
+                                                            <td class="d-none d-md-table-cell">16 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 77</th>
+                                                            <td class="d-none d-md-table-cell">17 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm btn-warning rounded-3 text-white">Process</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 78</th>
+                                                            <td class="d-none d-md-table-cell">18 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 79</th>
+                                                            <td class="d-none d-md-table-cell">19 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-danger">Failed</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 80</th>
+                                                            <td class="d-none d-md-table-cell">20 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 81</th>
+                                                            <td class="d-none d-md-table-cell">21 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-danger">Failed</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Classe 82</th>
+                                                            <td class="d-none d-md-table-cell">22 Feb 2021</td>
+                                                            <td class="d-none d-md-table-cell">20%</td>
+                                                            <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                                            </td>
+                                                          </tr>
+                                                        </tbody>
+                                                      </table>
+                                                </div>
+                                              </div>
+                                        </div>
+                                    </div> 
+                                    <div class="col-12"></div> <!--FAQ -->
+                                </div>
                             </div>
                         </div>
-                    <div class="col-12 col-xl-4 bg-warning">
-                        <div>
+                    <div class="col-12 col-xl-4 bg-warning"> <!--column bottom and right -->
+                        <div class="col-bottom">
                             hello
                         </div>
                     </div>
