--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                                         </thead>
                                                         <tbody>
                                                           <tr>
-                                                            <th scope="row">Classe 75</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 75</th>
                                                             <td class="d-none d-md-table-cell">15 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
@@ -225,7 +225,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 76</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 76</th>
                                                             <td class="d-none d-md-table-cell">16 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
@@ -235,7 +235,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 77</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 77</th>
                                                             <td class="d-none d-md-table-cell">17 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm btn-warning rounded-3 text-white">Process</button></td>
@@ -245,7 +245,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 78</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 78</th>
                                                             <td class="d-none d-md-table-cell">18 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
@@ -255,7 +255,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 79</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 79</th>
                                                             <td class="d-none d-md-table-cell">19 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-danger">Failed</button></td>
@@ -265,7 +265,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 80</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 80</th>
                                                             <td class="d-none d-md-table-cell">20 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
@@ -275,7 +275,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 81</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 81</th>
                                                             <td class="d-none d-md-table-cell">21 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-danger">Failed</button></td>
@@ -285,7 +285,7 @@
                                                             </td>
                                                           </tr>
                                                           <tr>
-                                                            <th scope="row">Classe 82</th>
+                                                            <th scope="row"><img src="img/class-avatar.png" alt="avatar" class="img-fluid"> Classe 82</th>
                                                             <td class="d-none d-md-table-cell">22 Feb 2021</td>
                                                             <td class="d-none d-md-table-cell">20%</td>
                                                             <td><button type="button" class="btn btn-sm rounded-3 btn-success">Done</button></td>
