feat: FAQ accordion

--- a/index.html
+++ b/index.html
@@ -297,10 +297,51 @@
                                                         </tbody>
                                                       </table>
                                                 </div>
-                                              </div>
+                                                <!-- /table -->
+                                            </div>
                                         </div>
                                     </div> 
-                                    <div class="col-12"></div> <!--FAQ -->
+                                    <div class="col-12">
+                                        <div class="py-4">
+                                            <div class="card">
+                                                <div class="card-header fs-4">
+                                                  F.A.Q.
+                                                </div>
+                                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                    <div class="accordion-item">
+                                                      <h2 class="accordion-header" id="flush-headingOne">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                                          Come posso aggiungere un nuovo studente?
+                                                        </button>
+                                                      </h2>
+                                                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                                        <div class="accordion-body">Clicca sul + in alto nella sezione blu.</div>
+                                                      </div>
+                                                    </div>
+                                                    <div class="accordion-item">
+                                                      <h2 class="accordion-header" id="flush-headingTwo">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                          Come posso accedere alla informazioni del mio account?
+                                                        </button>
+                                                      </h2>
+                                                      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                                        <div class="accordion-body">Clicca sull'icona della campanella</div>
+                                                      </div>
+                                                    </div>
+                                                    <div class="accordion-item">
+                                                      <h2 class="accordion-header" id="flush-headingThree">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                                          Posso usare questa dashboard da mobile?
+                                                        </button>
+                                                      </h2>
+                                                      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                                        <div class="accordion-body">Di solito è inusuale usare dashboard del genere da mobile, ma i nostri sviluppatori hanno fatto di tutto per permettere un'esperienza utente accettabile anche da dispositivi a schermi ridotti.</div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> <!--FAQ -->
                                 </div>
                             </div>
                         </div>
